Fix landing page overflow

--- a/src/assets/landing-1.css
+++ b/src/assets/landing-1.css
@@ -1,5 +1,4 @@
-body {
-    max-width: 100vw;
+html, body {
     overflow-x: hidden;
     margin: 0;
     padding: 0;
@@ -8,10 +7,14 @@ body {
 .landing-wrapper {
     /* landing */
 
-    width: 100%;
+    max-width: 100vw;
+    width: 100vw;
     height: 100vh;
 
-    background: #F9F8F8;
+    margin: 0;
+    padding: 0;
+
+    background-color: #f9f8f8;
 }
 
 @media all and (max-width: 1000px) {
